force-app/main/default/objects/KCS_PAR__c/KCS_PAR__c.object-meta.xml
<CustomObject>
    <description>KCS Performance Assessment Reviews</description>
    <label>KCS PAR</label>
    <nameField>
        <label>Knowledge  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KCS PARs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>