force-app/main/default/objects/KCS_PAR__c/fields/Article_Created__c.field-meta.xml
<CustomField>
    <fullName>Article_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Article Created</label>
    <type>Checkbox</type>
</CustomField>