force-app/main/default/objects/KCS_PAR__c/fields/Article_Reused__c.field-meta.xml
<CustomField>
    <fullName>Article_Reused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Article Reused</label>
    <type>Checkbox</type>
</CustomField>