force-app/main/default/objects/KCS_PAR__c/fields/Article_Updated__c.field-meta.xml
<CustomField>
    <fullName>Article_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Article Updated</label>
    <type>Checkbox</type>
</CustomField>