force-app/main/default/objects/KCS_PAR__c/fields/Articleattached__c.field-meta.xml
<CustomField>
    <fullName>Articleattached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Article attached</label>
    <type>Checkbox</type>
</CustomField>