force-app/main/default/objects/KCS_PAR__c/fields/Candidate_for_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Candidate_for_Knowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate for Knowledge</label>
    <type>Checkbox</type>
</CustomField>