force-app/main/default/objects/KCS_PAR__c/fields/Candidate_for_Update_to_Article__c.field-meta.xml
<CustomField>
    <fullName>Candidate_for_Update_to_Article__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate for Update to Article</label>
    <type>Checkbox</type>
</CustomField>