force-app/main/default/objects/KCS_PAR__c/fields/Candidateforexistingarticle__c.field-meta.xml
<CustomField>
    <fullName>Candidateforexistingarticle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate for existing article</label>
    <type>Checkbox</type>
</CustomField>