force-app/main/default/objects/KCS_PAR__c/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KCS_PARs</relationshipName>
    <type>Lookup</type>
</CustomField>