force-app/main/default/objects/KCS_PAR__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>KCS PARs</relationshipLabel>
    <relationshipName>KCS_PARs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>