force-app/main/default/objects/KCS_PAR__c/fields/Relevant_Articles_Linked__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Articles_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relevant Articles Linked</label>
    <type>Checkbox</type>
</CustomField>